--- a/styles/style.css
+++ b/styles/style.css
@@ -106,3 +106,15 @@ section{
     color: #757575;
     font-size:18px;
 }
+.about-info-container{
+    margin-top: 30px;
+    font-size:20px;
+    display: flex;
+    justify-content: space-around;
+}
+.about-property{
+    color: #757575;
+}
+.about-value{
+    font-weight: bold;
+}
