--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,11 @@ a{
     text-decoration: none;
     color: black;
 }
+.section-title{
+    font-size: 35px;
+    text-align: center;
+    margin: 50px 0;
+}
 .btn-primary{
     height: 64px;
     background-color: #FD6E0A;
@@ -92,6 +97,7 @@ main{
 section{
     margin: 130px 0;
 }
+
 .about{
     background: #FFF8F3;
     border-radius: 10px;
@@ -117,4 +123,26 @@ section{
 }
 .about-value{
     font-weight: bold;
+}
+/* What i do section styles */
+.skil-container{
+    display: flex;
+    gap:25px;
+    margin-top: 50px;
+}
+.skil{
+    padding:30px;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+}
+.skil-title{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skil-description{
+    font-size: 16px;
+    line-height: 30px;
 }
