--- a/styles/style.css
+++ b/styles/style.css
@@ -146,3 +146,45 @@ section{
     font-size: 16px;
     line-height: 30px;
 }
+/* summary section styles */
+.summary-title{
+    margin-bottom: 100px;
+}
+.resume-content{
+    display: flex;
+    gap:70px;
+    align-items: center;
+}
+.resume-title{
+    font-size:30px;
+    color: #474747;
+    margin-bottom: 30px;
+
+}
+.resume-info-title{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.resume-info-subtitle{
+    font-size:18px;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.resume-info-description{
+    color: #757575;
+    font-style: 16px;
+    line-height: 28px;
+}
+hr{
+    background: #D1D1D1;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-btn{
+   /* display: flex;
+   align-items: center;
+   justify-content: center; */
+   margin-top: 50px;
+   text-align: center;
+}
